style.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

:root {
  --primary-color: #ffd503;
  --light-grey: #F0F0F0;
  --footer: #383737;
}

body {
  font-family: "DM Sans", sans-serif;
  max-width: 100%;
  overflow-x: hidden;
 /* scroll-behavior: smooth; */
 }

 header {
  height: 80px;
  width: 100%;
  
 }

nav {
  overflow-y: hidden;
  height: 100%;
  width: 100%;
  background-color: red;
  display: flex;
  align-items: center;
  justify-content: space-between;
  overflow-x: hidden;
}

nav img {
  cursor: pointer;
  height: 80px;
  fill: none;
}

nav .burger-container {
  height: 80px;
  width: 80px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  z-index: 3;
}

nav .burger-container .burger {
  height: 2.7px;
  width: 35px;
  background-color: black;
  transition: all 0.5s ease;
  border-radius: 17px;
}

nav .burger-container .burger::before,
nav .burger-container .burger::after {
  content: "";
  position: absolute;
  height: 2.7px;
  width: 35px;
  background-color: black;
  transition: all 0.5s ease;
  border-radius: 17px;
}

nav .burger-container .burger::before {
  transform: translateY(-10px);
}

nav .burger-container .burger::after {
  transform: translateY(10px);
}

nav .burger-container.open .burger {
  background: transparent;
}

nav .burger-container.open .burger::before {
  transform: rotate(45deg);
}

nav .burger-container.open .burger::after {
  transform: rotate(-45deg);
}

.links-container {
  position: absolute;
  top: 0;
  right: 0;
  height: 100vh;
  width: 0vw;
  background-color: rgba(0, 0, 0, 0.12);
  z-index: 2;
  transition: all 0.2s ease;
  display: flex;
  flex-direction: column;
}

.nav-links {
  height: 100%;
  width: 0vw;
  background-color: white;
  align-self: flex-end;
  display: none;
}

.nav-links ul {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.nav-links ul li {
  list-style: none;
  background-color: var(--primary-color);
  width: 100%;
  display: grid;
  place-items: center;
  height: 80px;
  text-transform: uppercase;
  font-weight: 700;
}

.nav-links ul li a {
  text-decoration: none;
  color: black;
}

#home {
  padding: 0 27px;
}

#home h1 {
  font-size: 30px;
  margin: 40px 0 10px 0;
}

#home p {
  font-size: 20px;
  margin-bottom: 30px;
}

#home .btn-div {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

#home button {
  background-color: var(--primary-color);
  border: none;
  height: 50px;
  width: 48%;
  border-radius: 5px;
  cursor: pointer;
}

#home button a {
  color: black;
  text-decoration: none;
  display: flex;
  justify-content: center;
}

#home button a img {
  margin-right: 3px;
}

#home button a .btn-text {
  display: flex;
  flex-direction: column;
  text-align: left;
  font-size: 12px;
}

#home button a .btn-text .platform {
  font-weight: 600;
}

#home .hero-images {
  margin-top: 40px;
  display: flex;
  /* background-color: red; */
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
  /* width: 100%; */
}

#home .hero-images .top-images,
#home .hero-images .bottom-images {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
}

#home .hero-images .top-images {
  margin-bottom: 20px;
}

#home .hero-images .top-images .middle-one {
  align-self: flex-end;
}

#home .hero-images .bottom-images .middle-two {
  align-self: flex-start;
}

#home .hero-images img {
  width: 30%;
}

/* ABOUT SECTION */ /* ABOUT SECTION */ /* ABOUT SECTION */ /* ABOUT SECTION */
#about {
  padding: 0 27px;
  margin: 50px 0;
}

#about h2 {
  color: var(--primary-color);
  text-transform: uppercase;
  font-size: 25px;
  margin-bottom: 16px;
}

#about h4 {
  font-size: 22px;
  font-weight: 600;
  margin-bottom: 30px;
}

#about img {
  width: 100%;
}

#about p {
  margin: 20px 0 20px 0;
  font-size: 20px;
}

#about .more {
  font-size: 18px;
  font-weight: 900;
  text-decoration: underline;
  color: black;
}

/* SERVICES SECTION */
#services {
  padding: 0 27px;
  margin: 50px 0;
}

#services h2 {
  color: var(--primary-color);
  font-size: 25px;
  margin-bottom: 16px;
  text-transform: uppercase;
}

#services h3 {
  color: black;
  font-size: 30px;
  font-weight: 600;
  text-align: center;
}

#services .service {
  margin-top: 30px;
  display: flex;
  flex-direction: column;
}

#services .service img {
  width: 60px;
  align-self: center;
  margin-bottom: 10px;
}

#services .service h4 {
  font-size: 20px;
  text-align: center;
  margin-bottom: 15px;
}

#services .service p {
  font-size: 20px;
}

#services .find__apart h2 {
  color: black;
  font-size: 21px;
  margin-top: 40px;
  text-align: center;
}

#services .find__apart p {
  font-size: 20px;
}

#services .find__apart .image-part {
  display: flex;
  margin-top: 30px;
  width: 100%;
  justify-content: space-between;
}

.right__image-part {
  margin-top: 30px;
}

#services .find__apart .image-part .left__image-part,
#services .find__apart .image-part .right__image-part {
  width: 47%;
}

#services .find__apart .image-part img {
  width: 100%;
  margin-bottom: 20px;
}

#services .find__apart a {
  display: grid;
  place-items: center;  
  margin-top: 20px;
    color: black;
    background-color: var(--primary-color);
    border: none;
    width: 100%;
    height: 60px;
    border-radius: 5px;
    font-size: 18px;
    font-weight: 500;
    cursor: pointer;
    text-decoration: none;
}

/* CONTACT SECTION *//* CONTACT SECTION *//* CONTACT SECTION */
#contact .grey-container {
    background-color: var(--light-grey);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 40px 27px;
}

#contact .grey-container h2 {
    margin-bottom: 15px;
    text-align: center;
}
/* ... */

